添加「98五笔－繁体」选单
繁体汉字优先，词组部分为繁体字编码的十三万词条。

--- a/default.yaml
+++ b/default.yaml
@@ -8,7 +8,7 @@ schema_list:
   - schema: wubi98_qm
   - schema: wubi98_ci
   - schema: wubi98_trad
-  
+  - schema: wubi98_tw
 switcher:
   caption: 〔方案選單〕
   hotkeys:
