--- a/default.yaml
+++ b/default.yaml
@@ -9,6 +9,8 @@ schema_list:
   - schema: wubi98_ci
   - schema: wubi98_trad
   - schema: wubi98_tw
+  - schema: wubi98_mkphr
+
 switcher:
   caption: 〔方案選單〕
   hotkeys:
