--- a/wubi98_jian.extended.dict.yaml
+++ b/wubi98_jian.extended.dict.yaml
@@ -38,4 +38,13 @@ encoder:
       formula: "AaBaCaZa"
 ...
 
-如果爱情不能完美
+你可以随便添加词条到这里
+这里的词条会自动编码
+这里的词只能在出简的选单中打出来
+原因是只有出简的选单调用了这个字典
+别的选单只要调用了这个字典
+也一样能打出来
+这样的设定非常适合专业性强的写作场景
+上述词条都是可以打出来的
+包括这一条
+使用时注意先替换或修改这些
