--- a/default.yaml
+++ b/default.yaml
@@ -9,6 +9,7 @@ schema_list:
   - schema: wubi98_ci
   - schema: wubi98_trad
   - schema: wubi98_tw
+  - schema: wubi98_ts
   - schema: wubi98_U
   - schema: wubi98_mkphr
 
