--- a/default.yaml
+++ b/default.yaml
@@ -7,11 +7,13 @@ schema_list:
   - schema: wubi98_jian
   - schema: wubi98_qm
   - schema: wubi98_ci
+  - schema: wubi98_dz
   - schema: wubi98_trad
   - schema: wubi98_tw
   - schema: wubi98_ts
   - schema: wubi98_U
   - schema: wubi98_mkphr
+  - schema: terra_pinyin
 
 switcher:
   caption: 〔方案選單〕
