--- a/wubi98_dz.dict.yaml
+++ b/wubi98_dz.dict.yaml
@@ -26626,7 +26626,7 @@ encoder:
 赢	yemy	2726718	yemy
 贏	yemy	2726717	yemy
 䚽	yen	2726716	yen
-䊨	yeoy	2726715	yeoy
+䊨	yeow	2726715	yeow
 䛵	yepc	2726714	yepc
 誽	yeqn	2726713	yeqn
 鸁	yeqy	2726712	yeqy
