--- a/squirrel.yaml
+++ b/squirrel.yaml
@@ -1,7 +1,7 @@
 # Squirrel settings
 # encoding: utf-8
 
-config_version: "0.23"
+config_version: "0.31"
 
 us_keyboard_layout: false
 
@@ -11,13 +11,11 @@ chord_duration: 0.1  # seconds
 # options: always | never | appropriate
 show_notifications_when: appropriate
 
-# Show notifications via Notification Center instead of Growl.
-# (Only valid if OS version is at least 10.8 and
-#  'show_notifications_when' is NOT set to 'never'.)
-show_notifications_via_notification_center: false
+# DEPRECATED: since 0.27
+#show_notifications_via_notification_center: false
 
 style:
-  color_scheme: native
+  color_scheme: 98WB-1
   horizontal: true
   inline_preedit: true
   corner_radius: 10
@@ -26,12 +24,14 @@ style:
   line_spacing: 5
   spacing: 10  # space between preedit and candidates in non-inline mode
   #candidate_format: '%c. %@'
-  font_face: 'Lucida Grande'  # supporting soft cursor '›'
+  font_face: '98WB-1'  # supporting soft cursor '›'
   #font_point: 21
   #label_font_face: 'STHeitiTC-Medium'
   #label_font_point: 18
 
 preset_color_schemes:
+  #native: {}  # system UI colors
+
   aqua:
     name: 碧水／Aqua
     author: 佛振 <chen.sst@gmail.com>
@@ -43,6 +43,33 @@ preset_color_schemes:
     hilited_candidate_back_color: 0xeefa3a0a
     comment_text_color: 0x5a5a5a
     hilited_comment_text_color: 0xfcac9d
+
+
+  98WB-1:
+    name: 98WB-1
+    author: 98WB-1
+    horizontal: true                        # 水平排列
+    inline_preedit: true                    # 单行显示，false双行显示
+    candidate_format: "%c\u2005\u2005%@"    # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间。
+    corner_radius: 0                        # 候选条圆角
+    hilited_corner_radius: 3                # 高亮圆角
+    border_height: 8                        # 窗口边界高度，大于圆角半径才生效
+    border_width: 8                         # 窗口边界宽度，大于圆角半径才生效
+    border_color_width: 0
+    font_face: "98WB-1"                 # 候选词字体
+    font_point: 18                          # 候选字词大小
+    label_font_point: 14                    # 候选编号大小
+    text_color: 0x92f6da
+    back_color: 0x222222
+    candidate_text_color: 0xd8e3e6
+    hilited_text_color: 0xffcf9a
+    hilited_back_color: 0x222222
+    hilited_candidate_text_color: 0x92f6da
+    hilited_candidate_back_color: 0x10000000  # 0x333333
+    comment_text_color: 0x606cff
+
+
+
 
   azure:
     name: 青天／Azure
@@ -103,6 +130,44 @@ preset_color_schemes:
     hilited_candidate_back_color: 0x10000000  # 0x333333
     comment_text_color: 0x606cff
 
+  psionics:
+    name: 幽能／Psionics
+    author: 雨過之後、佛振
+    text_color: 0xc2c2c2
+    back_color: 0x444444
+    candidate_text_color: 0xeeeeee
+    hilited_text_color: 0xeeeeee
+    hilited_back_color: 0x444444
+    hilited_candidate_label_color: 0xfafafa
+    hilited_candidate_text_color: 0xfafafa
+    hilited_candidate_back_color: 0xd8bf00
+    comment_text_color: 0x808080
+    hilited_comment_text_color: 0x444444
+
+  purity_of_form:
+    name: 純粹的形式／Purity of Form
+    author: 雨過之後、佛振
+    text_color: 0xc2c2c2
+    back_color: 0x444444
+    candidate_text_color: 0xeeeeee
+    hilited_text_color: 0xeeeeee
+    hilited_back_color: 0x444444
+    hilited_candidate_text_color: 0x000000
+    hilited_candidate_back_color: 0xfafafa
+    comment_text_color: 0x808080
+
+  purity_of_essence:
+    name: 純粹的本質／Purity of Essence
+    author: 佛振
+    text_color: 0x2c2ccc
+    back_color: 0xfafafa
+    candidate_text_color: 0x000000
+    hilited_text_color: 0x000000
+    hilited_back_color: 0xfafafa
+    hilited_candidate_text_color: 0xeeeeee
+    hilited_candidate_back_color: 0x444444
+    comment_text_color: 0x808080
+
   starcraft:
     name: 星際我爭霸／StarCraft
     author: Contralisk <contralisk@gmail.com>, original artwork by Blizzard Entertainment
@@ -133,7 +198,7 @@ preset_color_schemes:
 
   solarized_rock:
     name: 曬經石／Solarized Rock
-    author: Aben <tntaben@gmail.com>, based on Ethan Schoonover's Solarized color scheme
+    author: "Aben <tntaben@gmail.com>, based on Ethan Schoonover's Solarized color scheme"
     back_color: 0x362b00
     border_color: 0x362b00
     text_color: 0x8236d3
@@ -164,6 +229,80 @@ preset_color_schemes:
     hilited_candidate_text_color: 0xc98915
     hilited_candidate_back_color: 0xeeeeee
 
+  apathy:
+    name: 冷漠／Apathy
+    author: LIANG Hai
+    horizontal: true  # 水平排列
+    inline_preedit: true #单行显示，false双行显示
+    candidate_format: "%c\u2005%@\u2005"  # 编号 %c 和候选词 %@ 前后的空间
+    corner_radius: 5  #候选条圆角
+    border_height: 0
+    border_width: 0
+    back_color: 0xFFFFFF  #候选条背景色
+    font_face: '98WB-1'  #候选词字体
+    font_point: 16  #候选字词大小
+    text_color: 0x424242  #高亮选中词颜色
+    label_font_face: "STHeitiSC-Light"   #候选词编号字体
+    label_font_point: 12   #候选编号大小
+    hilited_candidate_text_color: 0xEE6E00  #候选文字颜色
+    hilited_candidate_back_color: 0xFFF0E4  #候选文字背景色
+    comment_text_color: 0x999999  #拼音等提示文字颜色
+
+  dust:
+    name: 浮尘／Dust
+    author: Superoutman <asticosmo@gmail.com>
+    horizontal: true  # 水平排列
+    inline_preedit: true #单行显示，false双行显示
+    candidate_format: "%c\u2005%@\u2005"  # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间。
+    corner_radius: 2  #候选条圆角
+    border_height: 3                                   # 窗口边界高度，大于圆角半径才生效
+    border_width: 8                                    # 窗口边界宽度，大于圆角半径才生效
+    back_color: 0xeeffffff  #候选条背景色
+    border_color: 0xE0B693                             # 边框色
+    font_face: '98WB-1'     #候选词字体
+    font_point: 14  #候选字词大小
+    text_color: 0x424242  #高亮选中词颜色
+    label_font_face: "SimHei"   #候选词编号字体
+    label_font_point: 10   #候选编号大小
+    label_color: 0xcbcbcb                              # 预选栏编号颜色
+    candidate_text_color: 0x555555                     # 预选项文字颜色
+    text_color: 0x9e9e9e                               # 拼音行文字颜色，24位色值，16进制，BGR顺序
+    comment_text_color: 0x999999                       # 拼音等提示文字颜色
+    hilited_text_color: 0x9e9e9e                       # 高亮拼音 (需要开启内嵌编码)
+    hilited_candidate_text_color: 0x000000             # 第一候选项文字颜色
+    hilited_candidate_back_color: 0xfff0e4             # 第一候选项背景背景色
+    hilited_candidate_label_color: 0x555555            # 第一候选项编号颜色
+    hilited_comment_text_color: 0x9e9e9e               # 注解文字高亮
+
+  mojave_dark:
+    name: 沙漠夜／Mojave Dark
+    author: xiehuc <xiehuc@gmail.com>
+    horizontal: true                        # 水平排列
+    inline_preedit: true                    # 单行显示，false双行显示
+    candidate_format: "%c\u2005%@"    # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间。
+    corner_radius: 5                        # 候选条圆角
+    hilited_corner_radius: 3                # 高亮圆角
+    border_height: 6                        # 窗口边界高度，大于圆角半径才生效
+    border_width: 6                         # 窗口边界宽度，大于圆角半径才生效
+    border_color_width: 0
+    font_face: '98WB-1'                # 候选词字体
+    font_point: 16                          # 候选字词大小
+    label_font_point: 14                    # 候选编号大小
+
+    text_color: 0xdedddd                    # 拼音行文字颜色，24位色值，16进制，BGR顺序
+    back_color: 0x252320                    # 候选条背景色
+    label_color: 0x888785                   # 预选栏编号颜色
+    border_color: 0x020202                  # 边框色
+    candidate_text_color: 0xdedddd          # 预选项文字颜色
+    hilited_text_color: 0xdedddd            # 高亮拼音 (需要开启内嵌编码)
+    hilited_back_color: 0x252320            # 高亮拼音 (需要开启内嵌编码)
+    hilited_candidate_text_color: 0xffffff  # 第一候选项文字颜色
+    hilited_candidate_back_color: 0xcb5d00  # 第一候选项背景背景色
+    hilited_candidate_label_color: 0xffffff # 第一候选项编号颜色
+    comment_text_color: 0xdedddd            # 拼音等提示文字颜色
+    #hilited_comment_text_color: 0xdedddd    # 注解文字高亮
+
+
 app_options:
   com.apple.Spotlight:
     ascii_mode: true
@@ -181,15 +320,22 @@ app_options:
   org.vim.MacVim:
     ascii_mode: true
     no_inline: true
-  #com.apple.dt.Xcode:
-  #  ascii_mode: true
-  #com.barebones.textwrangler:
-  #  ascii_mode: true
-  #com.macromates.TextMate.preview:
-  #  ascii_mode: true
-  #com.sublimetext.2:
-  #  ascii_mode: true
-  #org.gnu.Aquamacs:
-  #  ascii_mode: true
-  #org.gnu.Emacs:
-  #  ascii_mode: true
+  com.apple.dt.Xcode:
+    ascii_mode: true
+  com.barebones.textwrangler:
+    ascii_mode: true
+  com.macromates.TextMate.preview:
+    ascii_mode: true
+  com.github.atom:
+    ascii_mode: true
+  com.microsoft.VSCode:
+    ascii_mode: true
+  com.sublimetext.2:
+    ascii_mode: true
+  org.gnu.Aquamacs:
+    ascii_mode: true
+  org.gnu.Emacs:
+    ascii_mode: true
+    no_inline: true
+  co.zeit.hyper:
+    ascii_mode: true
