--- a/default.yaml
+++ b/default.yaml
@@ -37,12 +37,8 @@ punctuator:
 
 key_binder:
   bindings:
-    __patch:
-      - key_bindings:/emacs_editing
-      - key_bindings:/move_by_word_with_tab
-      - key_bindings:/paging_with_minus_equal
-      - key_bindings:/paging_with_comma_period
-      - key_bindings:/numbered_mode_switch
+    - { when: has_menu, accept: Right, send: Down }
+    - { when: has_menu, accept: Left, send: Up }
 
 recognizer:
   patterns:
