--- a/wubi98_ci.dict.yaml
+++ b/wubi98_ci.dict.yaml
@@ -91645,6 +91645,7 @@ encoder:
 方言	yyyy	2000200	
 文言	yyyy	2000180	
 言	yyyy	2000160	yyyy
+龰	hhgy	2000160	hhgy
 ，	yz	2000160	
 。	yz	2000160	
 ！	yz	2000160	
