--- a/wubi98_dz.dict.yaml
+++ b/wubi98_dz.dict.yaml
@@ -32395,6 +32395,21 @@ encoder:
 言	yyy	1000040	yyyy
 譶	yyyf	1000020	yyyf
 言	yyyy	1000000	yyyy
+龰	hhgy	1000000	hhgy
+𠂇	dgt	1000000	dgt
+𠂉	ttg	1000000	ttg
+𠃌	nnll	1000000	nnll
+龴	cny	1000000	cny
+龵	rtgt	1000000	rtgt
+龶	gggg	1000000	gggg
+龷	aghg	1000000	aghg
+𡗗	dwi	1000000	dwi
+龸	ipb	1000000	ipb
+𢦏	fai	1000000	fai
+龹	ugi	1000000	ugi
+龺	fjj	1000000	fjj
+𤇾	oopb	1000000	oopb
+龻	yxxy	1000000	yxxy
 ，	yz	1000000	
 。	yz	1000000	
 ！	yz	1000000	
