--- a/wubi98_ci.dict.yaml
+++ b/wubi98_ci.dict.yaml
@@ -7931,7 +7931,7 @@ encoder:
 䮢	cote	3674320	cote
 駯	cotf	3674300	cotf
 騈	cotf	3674280	cotf
-䮔	cotf	3674260	cotf
+䮔	cota	3674260	cota
 䭽	cotg	3674240	cotg
 䭿	cotg	3674220	cotg
 駱	cotk	3674200	cotk
@@ -67711,7 +67711,7 @@ encoder:
 罇	tfbf	2478860	tfbf
 䍂	tfbf	2478840	tfbf
 䍈	tfbf	2478820	tfbf
-䍋	tfbf	2478800	tfbf
+䍋	tfba	2478800	tfba
 缽	tfbg	2478780	tfbg
 邾	tfbh	2478760	tfbh
 徒孙	tfbi	2478740	
