--- a/wubi98_dz.dict.yaml
+++ b/wubi98_dz.dict.yaml
@@ -3201,7 +3201,7 @@ encoder:
 䮢	cote	1583920	cote
 駯	cotf	1583900	cotf
 騈	cotf	1583880	cotf
-䮔	cotf	1583860	cotf
+䮔	cota	1583860	cota
 䭽	cotg	1583840	cotg
 䭿	cotg	1583820	cotg
 駱	cotk	1583800	cotk
@@ -24495,7 +24495,7 @@ encoder:
 罇	tfbf	1158040	tfbf
 䍂	tfbf	1158020	tfbf
 䍈	tfbf	1158000	tfbf
-䍋	tfbf	1157980	tfbf
+䍋	tfba	1157980	tfba
 缽	tfbg	1157960	tfbg
 邾	tfbh	1157940	tfbh
 罀	tfbi	1157920	tfbi
