--- a/wubi98_dz.extended.dict.yaml
+++ b/wubi98_dz.extended.dict.yaml
@@ -63,6 +63,7 @@ encoder:
 #金	q	90788801	qqqq
 
 # ↓ 扩展词库的用法四：「码表魔改」
+# 此处的「单字表」如果不加「词频」，将会覆盖掉主表的排序，在「扩展词库」中魔改「单字」时，请注意。
 # 单行单义码表，直接拷入生效。例如，下是一些「二简第三重码字」，删了「#」号，即可生效。
 
 #行	tg
